# PA-Painter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns  pa-painter.desktop
docs/: Extract Object-Space Normal.md  Stroke Time Map Shader Reference.md  code_review_2026_02_23.md  critical_review.md  glb-preview-export.md  normal-break-threshold.md  plan_color_boundary_break.md  plan_critical_review_improvements.md  plan_object_oriented_normal.md  plan_remove_region.md  plan_stroke_id_refactor.md  plan_unified_improvements.md  practical_arcana_painter_spec.md  stroke-density.md
examples/: PAPainterLogo.papr
src/: asset_io.rs  brush_profile.rs  compositing.rs  direction_field.rs  error.rs  glb_export.rs  gui.rs  io.rs  lib.rs  local_frame.rs  main.rs  main_gui.rs  math.rs  object_normal.rs  output.rs  path_placement.rs  pipeline.rs  pressure.rs  project.rs  region.rs  rng.rs  stretch_map.rs  stroke_color.rs  stroke_height.rs  test_util.rs  types.rs  util.rs  uv_mask.rs
src/gui/: dialogs.rs  dialogs_modal.rs  extract_prefs.rs  file_actions.rs  frame_update.rs  generation.rs  gpu_sync.rs  guide_editor.rs  mesh_preview.rs  mesh_shader.wgsl  mod.rs  panels.rs  pipeline.rs  preview.rs  recent_files.rs  sidebar.rs  slot_editor.rs  state.rs  textures.rs  undo.rs  update_check.rs  viewport.rs  widgets.rs
src/gui/file_actions/: export.rs  extract.rs  mesh_loading.rs  mod.rs  project_io.rs
src/io/: glb_export.rs  project.rs
src/mesh/: asset_io.rs  mod.rs  object_normal.rs  stretch_map.rs  uv_mask.rs
src/mesh/asset_io/: gltf_loader.rs  obj.rs  texture.rs
src/pipeline/: compositing.rs  direction_field.rs  output.rs  path_placement.rs
src/pipeline/compositing/: height_processing.rs  material_resolve.rs  mod.rs  tests.rs
src/pipeline/output/: exr_export.rs  extract.rs  mod.rs  normal_map.rs  png_export.rs
src/pipeline/path_placement/: mod.rs  tests.rs
src/types/: mod.rs
src/util/: brush_profile.rs  mod.rs  preset_defaults.rs  pressure.rs  rng.rs  stroke_color.rs
tests/: cli.rs  render_highres.rs
tests/fixtures/: cube_binary.glb  cube_text.gltf  mtl_edge_cases.mtl  two_nodes_translated.glb  usemtl_disambiguate.mtl  usemtl_no_groups.mtl  with_mtl.mtl
