[package]
name = "practical-arcana-painter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "practical-arcana-painter"
path = "src/main.rs"

[lib]
name = "practical_arcana_painter"
path = "src/lib.rs"

[dependencies]
tobj = "4"
gltf = "1.4"
image = "0.25"
exr = "1.7"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
zip = "2.1"
noise = "0.9"

[dev-dependencies]
smallvec = "1"
