[package]
name = "pa-painter"
version = "0.1.0"
edition = "2021"
description = "Procedural paint stroke generator for 3D assets — turn any mesh into a hand-painted look. Built for Practical Arcana, works with any UV-mapped 3D mesh."
license = "MIT"
authors = ["DiNo Box Inc."]
keywords = ["procedural", "texture", "paint", "stroke", "3d"]
categories = ["graphics", "game-development", "rendering"]
readme = "README.md"
rust-version = "1.87"
repository = "https://github.com/dinobox-dev/PA-Painter"
homepage = "https://github.com/dinobox-dev/PA-Painter"

[[bin]]
name = "pa-painter"
path = "src/main.rs"

[[bin]]
name = "pa-painter-gui"
path = "src/main_gui.rs"

[lib]
name = "pa_painter"
path = "src/lib.rs"

[dependencies]
tobj = "4"
gltf = "1.4"
image = "0.25"
exr = "1.7"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
zip = "2.1"
thiserror = "2"
noise = "0.9"
rayon = "1.10"
eframe = { version = "0.33", features = ["wgpu"] }
rfd = "0.15"
bytemuck = { version = "1", features = ["derive"] }
egui-phosphor = { version = "0.11.0", default-features = false, features = ["fill"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
smallvec = "1"

[package.metadata.bundle.bin.pa-painter-gui]
name = "PA Painter"
identifier = "com.dinobox.pa-painter"
icon = ["assets/icon.icns", "assets/icon.ico", "assets/icon_default.png"]
copyright = "Copyright © 2026 DiNo Box Inc."
category = "public.app-category.graphics-design"
